--- a/welfare/src/index.css
+++ b/welfare/src/index.css
@@ -113,6 +113,8 @@ button {
 }
 
 .cart-list {
+  display: flex;
+  flex-direction: row;
   position: relative;
   background: white;
   margin-bottom: 30px;
@@ -147,7 +149,17 @@ button {
   font-weight: 500;
   width: fit-content;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 50px;
+}
+
+.cart-items .cart-details button {
+  border: none;
+  border-radius: 10px;
+  font-size: 20px;
+  font-weight: 500;
+  width: fit-content;
+  text-align: center;
+  margin-top: 50px;
 }
 
 .cart-items .cart-details h4 {
