--- a/welfare/src/components/Footer/style.css
+++ b/welfare/src/components/Footer/style.css
@@ -24,6 +24,7 @@ footer .logo {
 }
 footer h2 {
   font-size: 20px;
+  color: #fff;
 }
 
 footer .row {
@@ -34,6 +35,7 @@ footer p {
   font-size: 16px;
   margin-bottom: 20px;
   opacity: 0.5;
+  color: #fff;
 }
 
 footer h2 {
